# osirase

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: documentation_guide.md
docs/guide/bot/messaging-modal-port/: guide.md
docs/intent/bot/messaging-modal-port/: intent.md
docs/plan/bot/messaging-modal-port/: plan.md
docs/reference/bot/messaging-modal-port/: reference.md
docs/standards/: documentation_guidelines.md  documentation_operations.md  git_workflow.md
src/: main.py
src/app/: __init__.py  config.py  container.py  runtime.py
src/bot/: __init__.py  client.py  commands.py
src/views/: __init__.py  view.py
tests/bot/: test_commands.py
tests/views/: test_send_message_modal.py
